--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-form": "^1.15.0",
+    "@tanstack/react-table": "^8.21.3",
     "antd": "^5.26.6",
     "chart.js": "^4.5.0",
     "react": "^19.1.0",
