--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@tanstack/react-virtual": "^3.13.12",
     "antd": "^5.26.6",
     "chart.js": "^4.5.0",
+    "file-saver": "^2.0.5",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11",
-    "use-local-storage": "^3.0.0"
+    "use-local-storage": "^3.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
