--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "file-saver": "^2.0.5",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11",
     "use-local-storage": "^3.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
